# Invi

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  gui.rs  inventory.rs  main.rs
