[package]
name = "invi"
version = "0.1.0"
authors = ["TheAngusMcFire  <christian.rieger@student.tugraz.at>"]
edition = "2018"

[dependencies]
colored = "1.8"
termion = { version = "1.5", optional = true }
tui = "0.5.1"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
whoami = "0.5.2"

[features]
default = ["termion"]